--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/smooth#readme>
 
 dependencies:
+- mono-traversable
 - base >= 4.7 && < 5
 - sized
 - type-natural
@@ -39,7 +40,9 @@ dependencies:
 - foldl
 - halg-algorithms
 - profunctors
+- unordered-containers
 - ListLike
+- reflection
 
 library:
   source-dirs: src
