--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -7,8 +7,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    
+    - name: Adds singular as dependency
+      run: |
+        apt-get update -y -qq && apt-get install -y -qq wget
+        wget ftp://jim.mathematik.uni-kl.de/repo/extra/gpg && apt-key add gpg && rm gpg
+        if [ ${GHC} -lt 806 ]; then
+          echo "deb ftp://jim.mathematik.uni-kl.de/repo/ubuntu16 xenial main" >> /etc/apt/sources.list
+        else
+          echo "deb ftp://jim.mathematik.uni-kl.de/repo/ubuntu18 bionic main" >> /etc/apt/sources.list
+        fi
+    - name: Install Dependent Libraries
+      uses: mstksg/get-package@v1
+      with:
+        apt-get: 'singular41 libgmp3-dev libgsl0-dev liblapack-dev'
+
     - name: Cache ~/.stack
       uses: actions/cache@v1.1.0
       with:
