--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -7,15 +7,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Adds singular as dependency
-      run: |
-        apt-get update -y -qq && apt-get install -y -qq wget
-        wget ftp://jim.mathematik.uni-kl.de/repo/extra/gpg && apt-key add gpg && rm gpg
-        echo "deb ftp://jim.mathematik.uni-kl.de/repo/ubuntu18 bionic main" >> /etc/apt/sources.list
+    # - name: Adds singular as dependency
+    #   run: |
+    #     apt-get update -y -qq && apt-get install -y -qq wget
+    #     wget ftp://jim.mathematik.uni-kl.de/repo/extra/gpg && apt-key add gpg && rm gpg
+    #     echo "deb ftp://jim.mathematik.uni-kl.de/repo/ubuntu18 bionic main" >> /etc/apt/sources.list
+    #     apt-get install singular41
     - name: Install Dependent Libraries
       uses: mstksg/get-package@v1
       with:
-        apt-get: 'singular41 libgmp3-dev libgsl0-dev liblapack-dev'
+        apt-get: 'libgmp3-dev libgsl0-dev liblapack-dev'
 
     - name: Cache ~/.stack
       uses: actions/cache@v1.1.0
