--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -69,9 +69,9 @@ jobs:
         cabal-version: '3.0'
     - name: Install dependencies
       run: |
-        stack --no-terminal build --only-dependencies
+        stack --no-terminal --only-dependencies build smooth
     - name: Build
       run: |
-        stack build
+        stack --no-terminal build smooth
     - name: Run tests
       run: stack --no-terminal test
