--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -69,9 +69,9 @@ jobs:
         cabal-version: '3.0'
     - name: Install dependencies
       run: |
-        stack --no-terminal --only-dependencies build smooth
+        stack --no-terminal build --test --no-run-tests --only-dependencies smooth
     - name: Build
       run: |
-        stack --no-terminal build smooth
+        stack --no-terminal build --test --no-run-tests smooth
     - name: Run tests
-      run: stack --no-terminal test
+      run: stack --no-terminal build --test
