--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -58,9 +58,6 @@ jobs:
         path: .stack-work
         # An explicit key for restoring and saving the cache
         key: ${{runner.os}}-${{github.ref}}-stack-work
-        # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
-        restore-keys: |
-          ${{runner.os}}-master-stack-work
     - name: Setup Stack
       uses: mstksg/setup-stack@v1
     - uses: actions/setup-haskell@v1
@@ -69,9 +66,9 @@ jobs:
         cabal-version: '3.0'
     - name: Install dependencies
       run: |
-        stack --no-terminal build --test --no-run-tests --only-dependencies smooth
+        stack --no-terminal build --test --no-run-tests --only-dependencies .
     - name: Build
       run: |
-        stack --no-terminal build --test --no-run-tests smooth
+        stack --no-terminal build --test --no-run-tests .
     - name: Run tests
-      run: stack --no-terminal build --test
+      run: stack --no-terminal . --test
