--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -15,8 +15,8 @@ jobs:
     #     apt-get install singular41
     - name: Install Dependent Libraries
       run: |
-        apt-get update -y -qq && apt-get install -y -qq wget
-        apt-get install -y -qq libgmp3-dev libgsl0-dev liblapack-dev
+        sudo apt-get update -y -qq
+        sudo apt-get install -y -qq wget libgmp3-dev libgsl0-dev liblapack-dev
 
     - name: Cache ~/.stack
       uses: actions/cache@v1.1.0
