--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -60,10 +60,10 @@ jobs:
     #     wget ftp://jim.mathematik.uni-kl.de/repo/extra/gpg && apt-key add gpg && rm gpg
     #     echo "deb ftp://jim.mathematik.uni-kl.de/repo/ubuntu18 bionic main" >> /etc/apt/sources.list
     #     apt-get install singular41
-    - name: Install Dependent Libraries
-      run: |
-        sudo apt-get update -y -qq
-        sudo apt-get install -y -qq wget libgmp3-dev libgsl0-dev liblapack-dev
+    # - name: Install Dependent Libraries
+    #   run: |
+    #     sudo apt-get update -y -qq
+    #     sudo apt-get install -y -qq wget libgmp3-dev libgsl0-dev liblapack-dev
     - name: Install dependencies
       run: |
         pwd
