--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -8,46 +8,46 @@ jobs:
 
     steps:
 
-    - name: Cache ~/.stack
-      uses: actions/cache@v1.1.0
-      with:
-        # A directory to store and save the cache
-        path: ~/.stack
-        # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-global
-        # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
-        restore-keys: |
-          ${{runner.os}}-master-stack-global
+    # - name: Cache ~/.stack
+    #   uses: actions/cache@v1.1.0
+    #   with:
+    #     # A directory to store and save the cache
+    #     path: ~/.stack
+    #     # An explicit key for restoring and saving the cache
+    #     key: ${{runner.os}}-${{github.ref}}-stack-global
+    #     # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
+    #     restore-keys: |
+    #       ${{runner.os}}-master-stack-global
 
-    - name: Cache ~/.cabal
-      uses: actions/cache@v1.1.0
-      with:
-        # A directory to store and save the cache
-        path: ~/.cabal
-        # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-cabal
-        # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
-        restore-keys: |
-          ${{runner.os}}-master-cabal
+    # - name: Cache ~/.cabal
+    #   uses: actions/cache@v1.1.0
+    #   with:
+    #     # A directory to store and save the cache
+    #     path: ~/.cabal
+    #     # An explicit key for restoring and saving the cache
+    #     key: ${{runner.os}}-${{github.ref}}-cabal
+    #     # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
+    #     restore-keys: |
+    #       ${{runner.os}}-master-cabal
 
-    - name: Cache ~/.ghc
-      uses: actions/cache@v1.1.0
-      with:
-        # A directory to store and save the cache
-        path: ~/.ghc
-        # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-ghc
-        # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
-        restore-keys: |
-          ${{runner.os}}-master-stack-global
+    # - name: Cache ~/.ghc
+    #   uses: actions/cache@v1.1.0
+    #   with:
+    #     # A directory to store and save the cache
+    #     path: ~/.ghc
+    #     # An explicit key for restoring and saving the cache
+    #     key: ${{runner.os}}-${{github.ref}}-ghc
+    #     # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
+    #     restore-keys: |
+    #       ${{runner.os}}-master-stack-global
 
-    - name: Cache .stack-work
-      uses: actions/cache@v1.1.0
-      with:
-        # A directory to store and save the cache
-        path: .stack-work
-        # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-work
+    # - name: Cache .stack-work
+    #   uses: actions/cache@v1.1.0
+    #   with:
+    #     # A directory to store and save the cache
+    #     path: .stack-work
+    #     # An explicit key for restoring and saving the cache
+    #     key: ${{runner.os}}-${{github.ref}}-stack-work
     - name: Setup Stack
       uses: mstksg/setup-stack@v1
     - uses: actions/setup-haskell@v1
