--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -69,9 +69,9 @@ jobs:
       run: |
         pwd
         ls
-        stack --no-terminal build --test --no-run-tests --only-dependencies .
+        stack --no-terminal build --test --no-run-tests --only-dependencies
     - name: Build
       run: |
-        stack --no-terminal build --test --no-run-tests .
+        stack --no-terminal build --test --no-run-tests
     - name: Run tests
-      run: stack --no-terminal . --test
+      run: stack --no-terminal build --test
