Test-cases for tensor products

--- a/package.yaml
+++ b/package.yaml
@@ -76,6 +76,7 @@ tests:
     - vector
     - mono-traversable
     - ListLike
+    - ghc-typelits-knownnat
     - singletons
     - quickcheck-instances
     - QuickCheck
