--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -67,7 +67,7 @@ jobs:
     - name: Install Dependent Libraries
       run: |
         sudo apt-get update -y -qq
-        sudo apt-get install -y -qq wget libgmp3-dev libgsl0-dev liblapack-dev
+        sudo apt-get install -y -qq wget libgmp3-dev libgsl0-dev liblapack-dev llvm-7-dev
     - name: Install dependencies
       run: |
         pwd
