--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -52,12 +52,11 @@ jobs:
         restore: |
           ${{runner.os}}-master-stack-work
 
-    - name: Setup Stack
-      uses: mstksg/setup-stack@v1
-    - uses: actions/setup-haskell@v1
+    - uses: actions/setup-haskell@v1.1
       with:
         ghc-version: '8.6.5'
         cabal-version: '3.0'
+        enable-stack: true
     # - name: Adds singular as dependency
     #   run: |
     #     apt-get update -y -qq && apt-get install -y -qq wget
