--- a/package.yaml
+++ b/package.yaml
@@ -40,6 +40,9 @@ dependencies:
 - foldl
 - halg-algorithms
 - profunctors
+- adjunctions
+- linear
+- hashable
 - unordered-containers
 - ListLike
 - reflection
@@ -57,6 +60,11 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - smooth
+    - simple-reflect
+    - algebra
+    - transformers
+    - lens
+    - dlist
 
 tests:
   smooth-test:
