--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "files.defaultLanguage": "haskell"
+  "files.defaultLanguage": "haskell",
+  "editor.defaultFormatter": "haskell.haskell",
+  "editor.formatOnSave": true,
+  "haskell.formattingProvider": "stylish-haskell"
 }
