--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "files.defaultLanguage": "haskell",
   "editor.defaultFormatter": "haskell.haskell",
   "editor.formatOnSave": true,
-  "haskell.formattingProvider": "stylish-haskell"
+  "haskell.formattingProvider": "fourmolu"
 }
