--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "files.defaultLanguage": "haskell",
   "editor.defaultFormatter": "haskell.haskell",
   "editor.formatOnSave": true,
-  "haskell.formattingProvider": "fourmolu"
+  "haskell.formattingProvider": "fourmolu",
+  "editor.tabSize": 2
 }
