--- a/package.yaml
+++ b/package.yaml
@@ -40,6 +40,8 @@ dependencies:
 - foldl
 - halg-algorithms
 - profunctors
+- semialign
+- these
 - adjunctions
 - linear
 - hashable
@@ -60,6 +62,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
     dependencies:
     - smooth
     - simple-reflect
@@ -81,7 +84,6 @@ tests:
     - smooth
     - ad
     - tasty
-    - semialign
     - these
     - semialign-indexed
     - type-natural
