--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -136,7 +136,7 @@ jobs:
         sudo apt-get install -y -qq wget libgmp3-dev libgsl0-dev liblapack-dev llvm-7-dev
     - name: Build
       run: |
-        stack --no-terminal build --test --no-run-tests
+        stack --no-terminal build --test --no-run-tests --bench --no-run-benchmarks
 
   test:
     needs:
