--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "editor.tabSize": 2,
   "github-actions.workflows.pinned.workflows": [
     ".github/workflows/haskell.yml"
-  ]
+  ],
+  "github-actions.workflows.pinned.refresh.enabled": true
 }
