--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -60,7 +60,7 @@ jobs:
       run: |
         pwd
         ls
-        stack --no-terminal build --test --no-run-tests --only-dependencies
+        stack --no-terminal build --test --no-run-tests --bench --no-run-benchmarks --only-dependencies
 
   build:
     needs:
